--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -52,14 +52,14 @@
 			}
 		}
 	}
-	&__modal {
+}
+
+/*
+&__modal {
 		height: 100%;
 		width: 100%;
 		overflow-x: hidden;
 		overflow-y: scroll;
-		&__scrollHeight {
-			max-height: 22rem;
-		}
 		&__in {
 			animation: fadeIn .3s cubic-bezier(0.65, 0, 0.35, 1) .15s both;
 		}
@@ -107,26 +107,4 @@
 			min-height: 22rem;
 		}
 	}
-}
-
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-		transform: translateY(-1.5rem);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
-
-@keyframes fadeOut {
-	from {
-		opacity: 1;
-		transform: translateY(0);
-	}
-	to {
-		opacity: 0;
-		transform: translateY(1.5rem);
-	}
-}
+ */
