--- a/src/assets/modules/global.module.scss
+++ b/src/assets/modules/global.module.scss
@@ -107,12 +107,17 @@
 	top: -2rem;
 }
 .posLegal {
-	top: -20rem!important;
-	width: 32%!important;
+	@include laptop {
+		top: -11rem!important;
+	}
+	@include tablet {
+		top: -15.4rem!important;
+		width: 32%!important;
+	}
 }
 .rect {
 	width: 40%;
-	transition: top 1s cubic-bezier(0.65, 0, 0.35, 1);
+	transition: top 1s cubic-bezier(0.65, 0, 0.35, 1), width 1s cubic-bezier(0.65, 0, 0.35, 1);
 	@include laptop {
 		width: 32%;
 		top: 17rem;
