--- a/src/components/mentions/mentions.module.scss
+++ b/src/components/mentions/mentions.module.scss
@@ -9,7 +9,7 @@
 		display: none;
 		& svg {
 			fill: var(--theme-dark);
-			transition: fill .2s linear;
+			transition: fill .3s cubic-bezier(0.65, 0, 0.35, 1);
 		}
 		@include tablet {
 			display: flex;
